force-app/main/default/objects/cpm__Installment__c/cpm__Installment__c.object-meta.xml
<CustomObject>
    <description>Installments are the result of a Recurring Payment. Installments track the status of a invoice or a direct debit transaction.</description>
    <label>Installment</label>
    <nameField>
        <displayFormat>INST-{00000000}</displayFormat>
        <label>Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>