force-app/main/default/objects/cpm__Installment__c/fields/cpm__Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Holder_Name__c</fullName>
    <description>The account holder name from the associated payment profile.</description>
    <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Account_Holder_Name__c ) ) , cpm__Custom_Account_Holder_Name__c , cpm__Payment_Profile__r.cpm__Holder_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The account holder name as stated on the payment profile.</inlineHelpText>
    <label>Account Holder Name</label>
    <type>Text</type>
</CustomField>