force-app/main/default/objects/cpm__Installment__c/fields/cpm__Bank_Statement_Description__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Statement_Description__c</fullName>
    <description>The description provided to the bank or payment provider for use on the bank statement of the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bank statement.</description>
    <inlineHelpText>The description provided to the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bankstatement.</inlineHelpText>
    <label>Bank Statement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>