force-app/main/default/objects/cpm__Installment__c/fields/cpm__City__c.field-meta.xml
<CustomField>
    <fullName>cpm__City__c</fullName>
    <formula>cpm__Payment_Profile__r.cpm__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>