force-app/main/default/objects/cpm__Installment__c/fields/cpm__Contact__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The debitor</description>
    <inlineHelpText>The debitor</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>