force-app/main/default/objects/cpm__Installment__c/fields/cpm__Country__c.field-meta.xml
<CustomField>
    <fullName>cpm__Country__c</fullName>
    <formula>cpm__Payment_Profile__r.cpm__Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>