force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_3__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_3__c</fullName>
    <label>Custom 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>