force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_4__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_4__c</fullName>
    <label>Custom 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>