force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_BIC__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_BIC__c</fullName>
    <label>Custom Account Number Additional</label>
    <length>50</length>
    <type>Text</type>
</CustomField>