force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_Mandate_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Mandate_Date_Signed__c</fullName>
    <label>Custom Mandate Date Signed</label>
    <type>Date</type>
</CustomField>