force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_Mandate_ID__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Mandate_ID__c</fullName>
    <label>Custom Mandate ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>