force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Payment_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Populate this field if you want to use another Payment Reference than the one is generated in Salesforce</inlineHelpText>
    <label>Custom Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>