force-app/main/default/objects/cpm__Installment__c/fields/cpm__Custom_Sequence_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Sequence_Type__c</fullName>
    <label>Custom Sequence Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>