force-app/main/default/objects/cpm__Installment__c/fields/cpm__GUID__c.field-meta.xml
<CustomField>
    <fullName>cpm__GUID__c</fullName>
    <label>GUID</label>
    <length>38</length>
    <type>Text</type>
</CustomField>