force-app/main/default/objects/cpm__Installment__c/fields/cpm__Housename_Or_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Housename_Or_Number__c</fullName>
    <description>House name or number.</description>
    <formula>cpm__Payment_Profile__r.cpm__Housename_Or_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House name or number</label>
    <type>Text</type>
</CustomField>