force-app/main/default/objects/cpm__Installment__c/fields/cpm__IBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__IBAN__c</fullName>
    <description>The IBAN as stated on the payment profile.</description>
    <formula>IF ( NOT ( ISBLANK ( cpm__Custom_IBAN__c ) ) , cpm__Custom_IBAN__c , 
  IF ( cpm__Payment_Profile__r.RecordType.DeveloperName == &apos;IBAN&apos; , cpm__Payment_Profile__r.cpm__IBAN__c , 
    IF ( cpm__Payment_Profile__r.RecordType.DeveloperName == &apos;Credit_Card&apos;,  cpm__Mandate__r.cpm__Reference__c, cpm__Payment_Profile__r.cpm__Bank_Account__c )
  )
)</formula>
    <inlineHelpText>The IBAN as stated on the payment profile.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>