force-app/main/default/objects/cpm__Installment__c/fields/cpm__Last_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Collection_Date__c</fullName>
    <description>The last time this installment was collected.</description>
    <inlineHelpText>The last time this installment was collected.</inlineHelpText>
    <label>Last Collection Date</label>
    <type>Date</type>
</CustomField>