force-app/main/default/objects/cpm__Installment__c/fields/cpm__Last_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Failure_Reason__c</fullName>
    <label>Last Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>