force-app/main/default/objects/cpm__Installment__c/fields/cpm__Last_Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Raw_Response__c</fullName>
    <label>Last Raw Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>