force-app/main/default/objects/cpm__Installment__c/fields/cpm__Last_ReasonCode_Received__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_ReasonCode_Received__c</fullName>
    <description>This field is only used in Finance integration</description>
    <inlineHelpText>Contains the last received Reason Code</inlineHelpText>
    <label>Last ReasonCode Received</label>
    <length>10</length>
    <type>Text</type>
</CustomField>