force-app/main/default/objects/cpm__Installment__c/fields/cpm__Last_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Status_Reason__c</fullName>
    <label>Last Status Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>