force-app/main/default/objects/cpm__Installment__c/fields/cpm__Mandate__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The mandate used to collect this installment.</description>
    <inlineHelpText>The mandate used to collect this installment.</inlineHelpText>
    <label>Mandate</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>cpm__Mandate__c.cpm__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cpm__Mandate__c.cpm__Payment_Profile__c</field>
            <operation>equals</operation>
            <valueField>$Source.cpm__Payment_Profile__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.cpm__Payment_Profile__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>By default only active mandates are shown</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cpm__Mandate__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>