force-app/main/default/objects/cpm__Installment__c/fields/cpm__Mandate_ID__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate_ID__c</fullName>
    <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Mandate_ID__c ) ) , cpm__Custom_Mandate_ID__c , cpm__Mandate__r.cpm__Mandate_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mandate ID</label>
    <type>Text</type>
</CustomField>