force-app/main/default/objects/cpm__Installment__c/fields/cpm__of_times_failed__c.field-meta.xml
<CustomField>
    <fullName>cpm__of_times_failed__c</fullName>
    <label># of times failed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>