force-app/main/default/objects/cpm__Installment__c/fields/cpm__of_times_paid__c.field-meta.xml
<CustomField>
    <fullName>cpm__of_times_paid__c</fullName>
    <description>The number of times this transaction was paid.</description>
    <inlineHelpText>The number of times this transaction was paid.</inlineHelpText>
    <label># of times paid</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>