force-app/main/default/objects/cpm__Installment__c/fields/cpm__of_times_reversed__c.field-meta.xml
<CustomField>
    <fullName>cpm__of_times_reversed__c</fullName>
    <description>The number of times this transaction was reversed.</description>
    <inlineHelpText>The number of times this transaction was reversed.</inlineHelpText>
    <label># of times reversed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>