force-app/main/default/objects/cpm__Installment__c/fields/cpm__PayLinks_Page__c.field-meta.xml
<CustomField>
    <fullName>cpm__PayLinks_Page__c</fullName>
    <label>PayLinks Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>