force-app/main/default/objects/cpm__Installment__c/fields/cpm__Payment_Journey__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Journey</label>
    <referenceTo>cpm__Payment_Journey__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>