force-app/main/default/objects/cpm__Installment__c/fields/cpm__Payment_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Transaction_Id__c</fullName>
    <description>Populated from payment provider integrations</description>
    <label>Payment Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>