force-app/main/default/objects/cpm__Installment__c/fields/cpm__Recurring_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Recurring_Payment_Reference__c</fullName>
    <description>The payment reference from recurring.</description>
    <externalId>true</externalId>
    <inlineHelpText>The payment reference from recurring.</inlineHelpText>
    <label>Recurring Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>