force-app/main/default/objects/cpm__Installment__c/fields/cpm__Relates_To__c.field-meta.xml
<CustomField>
    <fullName>cpm__Relates_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relates To</label>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Payable Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>