force-app/main/default/objects/cpm__Installment__c/fields/cpm__Sequence_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Sequence_Type__c</fullName>
    <description>Is this Direct Debit a First or Recurring.</description>
    <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Sequence_Type__c ) ) , cpm__Custom_Sequence_Type__c , IF (  cpm__Mandate__r.cpm__Use_Last_on_next_run__c , &quot;FNAL&quot;, IF (  cpm__Mandate__r.cpm__Use_First_on_next_run__c , &quot;FRST&quot;, 
IF ( AND ( ISPICKVAL ( cpm__Mandate__r.cpm__Type__c, &apos;Recurring&apos;)   , NOT(ISBLANK(cpm__Mandate__r.cpm__Last_Used__c)) ) , &quot;RCUR&quot; , 
IF ( OR ( ISPICKVAL( cpm__Mandate__r.cpm__Type__c, &apos;One-Off&apos;) , ISPICKVAL(cpm__Mandate__r.cpm__Type__c, &apos;Eenmalig&apos;) ) , &quot;OOFF&quot; , &quot;FRST&quot; ) ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this Direct Debit a First or Recurring.</inlineHelpText>
    <label>Sequence Type</label>
    <type>Text</type>
</CustomField>