force-app/main/default/objects/cpm__Installment__c/fields/cpm__Source__c.field-meta.xml
<CustomField>
    <fullName>cpm__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PaymentHub</fullName>
            </value>
            <value>
                <fullName>GiftAid-Source</fullName>
            </value>
            <value>
                <fullName>FinDock-for-Fundraising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>