force-app/main/default/objects/cpm__Installment__c/fields/cpm__Street__c.field-meta.xml
<CustomField>
    <fullName>cpm__Street__c</fullName>
    <formula>cpm__Payment_Profile__r.cpm__Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>