force-app/main/default/objects/cpm__Installment__c/fields/cpm__Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cpm__Payment_Processor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FareShare Stripe Account</fullName>
            </value>
            <value>
                <fullName>Gather Stripe</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>FareShare GoCardless Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>