force-app/main/default/objects/cpm__Installment__c/fields/cpm__Zipcode__c.field-meta.xml
<CustomField>
    <fullName>cpm__Zipcode__c</fullName>
    <formula>cpm__Payment_Profile__r.cpm__Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zipcode</label>
    <type>Text</type>
</CustomField>