force-app/main/default/objects/cpm__Installment__c/fields/fdff__DonorCoverAmount__c.field-meta.xml
<CustomField>
    <fullName>fdff__DonorCoverAmount__c</fullName>
    <label>Donor Cover Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>